solve overflow problem

--- a/project/003-blog/css/common/global.css
+++ b/project/003-blog/css/common/global.css
@@ -3,6 +3,10 @@
   box-sizing: border-box;
 }
 
+/* body {
+  overflow:hidden;
+} */
+
 html {
   font-family: sans-serif;
 }
